[package]
build = "scripts/build.rs"
edition = "2021"
name = "line-up-4"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = {version = "0.6.2", features = ["serde"]}
dotenv = "0.15.0"
futures = "0.3.25"
hyper = "0.14.23"
mongodb = {version = "2.3.1", features = ["tokio-runtime"]}
prost = "0.11.6"
serde = "1.0.152"
tokio = "1.24.1"
tokio-stream = "0.1.11"
tonic = "0.8.3"
tonic-reflection = "0.6.0"

[build-dependencies]
tonic-build = "0.8.3"

[[bin]]
name = "line-up-4"
path = "src/main.rs"
